# notification-service

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  Readme.md  build.rs  deployment.yaml  docker-compose.yml  flake.nix  justfile  prometheus.yml  rust-toolchain.toml  rustfmt.toml
.cursor/rules/: no-comments.md
.github/workflows/: nix.yml  notification-queue.yml  notification.yml
android-client/: build.gradle  local.properties
android-client/app/: build.gradle
android-client/app/src/main/: AndroidManifest.xml
android-client/app/src/main/java/com/example/grpc/: MainActivity.java  Notification.java  NotificationHeaderInterceptor.java  NotificationResponseObserver.java
android-client/app/src/main/proto/: notification_service.proto
android-client/gradle/wrapper/: gradle-wrapper.properties
config/client-side-streaming/: Config.toml  prometheus.yml
crates/liveactivity_service/: Cargo.toml
crates/liveactivity_service/src/: environment.rs  lib.rs  main.rs  server.rs
crates/notification_service/: Cargo.toml  build.rs
crates/notification_service/protos/: healthcheck.proto  notification_service.proto
crates/notification_service/src/: environment.rs  lib.rs  main.rs  reader.rs  server.rs
crates/notification_service/src/action/: healthcheck.rs  mod.rs  notification.rs
crates/notification_service/src/common/: kafka.rs  types.rs  utils.rs
crates/notification_service/src/kafka/: mod.rs  producers.rs  types.rs
crates/notification_service/src/middleware/: mod.rs  request_response_tracking.rs
crates/notification_service/src/outbound/: external.rs  types.rs
crates/notification_service/src/redis/: commands.rs  keys.rs  types.rs
crates/notification_service/src/tools/: callapi.rs  error.rs  kafka.rs  logger.rs  mod.rs  prometheus.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs  loadtest.rs  notification_service.rs
dhall-configs/dev/: liveactivity_service.dhall  notification_service.dhall
nix/: docker.nix  pre-commit.nix  rust.nix  services.nix
node-client/: index.js  package.json
protos/: chat.proto  client-side-streaming.proto  notification_service.proto  server-side-streaming.proto
src/: client.rs  environment.rs  lib.rs  main.rs  notifier.rs  server.rs
src/client-side-streaming/: client.rs  server.rs
src/client-side-streaming/android-client/app/src/androidTest/java/com/example/grpc/: ExampleInstrumentedTest.java
src/client-side-streaming/android-client/app/src/main/: AndroidManifest.xml
src/client-side-streaming/android-client/app/src/main/java/com/example/grpc/: ChatActivity.java  StreamActivity.java
src/client-side-streaming/android-client/app/src/main/proto/: chat.proto  client-side-streaming.proto
src/client-side-streaming/android-client/app/src/main/res/navigation/: nav_graph.xml
src/client-side-streaming/android-client/app/src/main/res/values/: themes.xml
src/client-side-streaming/client/: client.rs
src/client-side-streaming/client/android/: settings.gradle
src/client-side-streaming/client/android/app/: build.gradle
src/client-side-streaming/client/android/app/src/main/: AndroidManifest.xml
src/client-side-streaming/client/android/app/src/main/java/com/example/grpc/: StreamActivity.java
src/client-side-streaming/client/android/app/src/main/proto/: client-side-streaming.proto
src/client-side-streaming/client/android/app/src/main/res/values/: strings.xml
src/client-side-streaming/client/android/app/src/main/res/values-night/: themes.xml
src/client-side-streaming/client/android/app/src/test/java/com/example/grpc/: ExampleUnitTest.java
src/client-side-streaming/client/android/gradle/wrapper/: gradle-wrapper.properties
src/client-side-streaming/handlers/: mod.rs
src/client-side-streaming/services/: client_stream.rs  mod.rs
src/client-side-streaming/types/: api.rs  config.rs
src/client-side-streaming/utils/: hybrid.rs  mod.rs  prometheus.rs
src/common/: mod.rs  types.rs
src/redis/: commands.rs  types.rs
src/server-side-streaming/: client.rs  notifier.rs  server.rs
src/utils/: mod.rs
web-client/: index.js  package-lock.json  webpack.config.js
web-client/proto/: notification_service.proto
