[package]
name = "grpc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "notifier"
path = "src/notifier.rs"

[dependencies]
futures = "0.3.26"
http-body = "0.4.5"
hyper = "0.14.24"
lazy_static = "1.4.0"
prometheus = { version = "0.13.3", features = ["process"] }
prost = "0.11.6"
redis = "0.22.3"
sha256 = "1.1.2"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tonic = "0.8.3"
tower = "0.4.13"
warp = "0.3.3"

[build-dependencies]
tonic-build = "0.8.4"
