[package]
name = "grpc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sss-server"
path = "src/server-side-streaming/server.rs"

[[bin]]
name = "sss-client"
path = "src/server-side-streaming/client.rs"

[[bin]]
name = "sss-notifier"
path = "src/server-side-streaming/notifier.rs"

[[bin]]
name = "css-server"
path = "src/client-side-streaming/server.rs"

[[bin]]
name = "css-client"
path = "src/client-side-streaming/client.rs"

[dependencies]
async-stream = "0.2"
futures = "0.3.26"
http-body = "0.4.5"
hyper = "0.14.24"
once_cell = "1.17.1"
prometheus = { version = "0.13.3", features = ["process"] }
prost = "0.11.6"
redis = "0.22.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.1.2"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tonic = "0.8.3"
tower = "0.4.13"
warp = "0.3.3"

[build-dependencies]
tonic-build = "0.8.4"
