[package]
name = "notification-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.2"
axum = "0.6.7"
actix-web-prom = "0.7.0"
anyhow = "1.0.75"
chrono = "0.4.23"
config = "0.13.3"
http-body = "0.4.5"
hyper = "0.14.24"
once_cell = "1.17.1"
pin-project = "1.0.12"
prometheus = { version = "0.13.3", features = ["process"] }
prost = "0.11.6"
redis = "0.22.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_dhall = "0.12.1"
serde_path_to_error = "0.1.9"
sha256 = "1.1.2"
strum = "0.24.0"
strum_macros = "0.24.1"
tonic = "0.8.3"
tower = "0.4.13"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "registry", "json"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
fred = { version = "6.0.0", features = ["metrics", "partial-tracing"] }
uuid = { version = "1.3.0", features = ["v4"] }
warp = "0.3.3"
tokio = { version = "1.29.1", features = ["full", "rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3.28"
package = "0.0.0"

[build-dependencies]
tonic-build = "0.8.4"
