[package]
name = "liveactivity_service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "liveactivity-service"
path = "src/main.rs"

[dependencies]
bytes = "1.6.0"
env_logger = { version = "0.10", default-features = false }
http = "1.1.0"
tokio-util = "0.7.10"
tokio = { version = "1.37.0", features = ["full"] }
teloxide = { version = "0.12.0", features = ["macros"] }
rand = "0.8.5"
resvg = "0.28.0"
serde_json = "1.0"
http2 = "0.1.0"
solicit = "0.4.4"
actix-rt = "2"
actix-web = { version = "4", features = ["rustls-0_22"] }
rustls = "0.22"
rustls-pemfile = "2"
reqwest = { version = "0.11", features = ["hyper-rustls", "json"] }
hyper = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
log = "0.4"
serde_dhall = "0.12.1"