[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.28.2"
chrono = { version = "0.4.23", features = ["serde"] }
futures = "0.3"
anyhow = "1.0.75"
serde_dhall = "0.12.1"
tokio-stream = "0.1"
tonic = { version = "0.10.2", features = ["transport","tls","tls-roots"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
uuid = "1.7.0"
lazy_static = "1.4"

shared = { git = "https://github.com/nammayatri/shared-kernel-rs", rev = "6c21852" }
notification_service = { version = "0.1.0", path = "../notification_service" }
